<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="32dp">


    <TextView
            android:id="@+id/textView"
            style="@style/BottonBarTitleStyle"
            android:text="@string/startFromPoint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/am_bb_from_to_btn"
            style="@style/BottonBarTitleStyle"
            android:text="@string/StartPoint"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
            android:id="@+id/textView2"
            style="@style/BottonBarTitleStyle"
            android:text="@string/in"
            app:layout_constraintBottom_toBottomOf="@+id/am_bb_from_to_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/am_bb_from_to_btn"
            app:layout_constraintTop_toTopOf="@+id/am_bb_from_to_btn" />

    <TextView
            android:id="@+id/am_bb_work_holydays_btn"
            style="@style/BottonBarTitleStyle"
            android:text="@string/workingDays"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
            android:id="@+id/bb_img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:foregroundTintMode="add"
            android:src="@drawable/ic_home_black_24dp"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/textView4"
            style="@style/BottonBarTitleStyle"
            android:text="@string/possibleFromToHome"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/bb_img_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bb_img_home"
            app:layout_constraintTop_toTopOf="@+id/bb_img_home"
            app:layout_constraintVertical_bias="1.0" />

    <ImageView
            android:id="@+id/bb_img_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:foregroundTintMode="add"
            android:src="@drawable/ic_directions_bike_black_24dp"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bb_img_home"
            app:layout_constraintTop_toBottomOf="@+id/bb_img_home"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/textView5"
            style="@style/BottonBarTitleStyle"
            android:text="@string/possibleWithABike"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/bb_img_bike"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bb_img_bike"
            app:layout_constraintTop_toTopOf="@+id/bb_img_bike"
            app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>