<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list_item_colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false"
        app:contentPaddingRight="8dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingTop="8dp"
        app:contentPaddingBottom="14dp"
       >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/if_in_text"
                android:text="@string/in"
                style="@style/FlightItemTextBlock"
                app:layout_constraintBaseline_toBaselineOf="@id/if_start_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/if_start_time"
                style="@style/FlightItemTextBlock"
                android:text="@string/startTime"
                android:textColor="@color/colorTextMain"
                android:textSize="@dimen/h1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_in_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        <TextView
                android:id="@+id/if_start_description"
                style="@style/FlightItemTextBlock"
                android:text="@string/fromPoint"
                app:layout_constraintBaseline_toBaselineOf="@id/if_start_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_start_time" />

        <TextView
                android:id="@+id/if_start_point"
                style="@style/FlightItemTextBlock"
                android:text="@string/StartPoint"
                android:textColor="@color/colorTextMain"
                android:textStyle="bold|italic"
                app:layout_constraintBaseline_toBaselineOf="@id/if_start_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_start_description" />

        <TextView
                android:id="@+id/if_flight_status"
                style="@style/FlightItemTextBlock"
                android:textColor="@color/colorTextMain"
                android:text="@string/Status"
                app:layout_constraintBaseline_toBaselineOf="@id/if_start_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_start_point" />

        <TextView
                android:id="@+id/if_in_text2"
                style="@style/FlightItemTextBlock"
                android:text="@string/in"
                app:layout_constraintBaseline_toBaselineOf="@+id/if_finish_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/if_finish_time"
                style="@style/FlightItemTextBlock"
                android:layout_marginTop="8dp"
                android:text="@string/startTime"
                android:textColor="@color/colorTextMain"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_in_text2"
                app:layout_constraintTop_toBottomOf="@+id/if_in_text"
                app:layout_constraintVertical_bias="0.0" />

        <TextView
                android:id="@+id/if_finish_description"
                style="@style/FlightItemTextBlock"
                android:text="@string/finishIn"
                app:layout_constraintBaseline_toBaselineOf="@+id/if_finish_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_finish_time" />

        <TextView
                android:id="@+id/if_finish_point"
                style="@style/FlightItemTextBlock"
                android:text="@string/finishPoint"
                android:textColor="@color/colorTextMain"
                android:textStyle="bold|italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/if_finish_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/if_finish_description" />

        <ImageView
                android:id="@+id/if_img_bike"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:foregroundTintMode="add"
                android:tint="@color/colorPrimaryText"
                app:layout_constraintBaseline_toBaselineOf="@+id/if_img_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        <ImageView
                android:id="@+id/if_img_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:tint="@color/colorPrimaryText"
                android:tintMode="add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/if_img_bike"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>